:pencil: Reset password method was created
